Fix T89004: Undefined Geometry nodes cause a crash when connected to a Group Output node.

Patch provided by Jacques Lucke.